# mod_piper_tts

./: README.md
sources/: Makefile.am  mod_piper_tts.c  mod_piper_tts.h  utils.c
sources/conf/autoload_configs/: piper_tts.conf.xml
sources/conf/dialplan/: example.xml
